# IA-resolver-OS

./: .replit  COMO_USAR_VSCODE.md  DOCUMENTACAO_SISTEMA.md  INSTALACAO_VSCODE.md  README.md  app.py  case_service.py  file_processor.py  ml_service.py  models.py  os_assistant.db  pdf_analyzer.py  pyproject.toml  replit.md  requirements_local.txt  routes.py  routes_analysis_feedback.py  run_local.py  run_production.py  setup_local.md  solution_formatter.py  technical_documentation.md
.local/state/replit/agent/: .latest.json  progress_tracker.md
.local/state/replit/agent/filesystem/: filesystem_state.json
attached_assets/: Pasted-PS-C-Users-joao-trombin-Downloads-IA-resolver-OS-1-IA-resolver-OS-python-run-local-py--1755200803672_1755200803672.txt  Pasted-T-tulo-do-projeto-Assistente-Inteligente-para-Diagn-stico-e-Resolu-o-de-OS-Multissistema-Descri--1755192073289_1755192073290.txt  tct_100_casos_1755199316269.xlsx
ml_models/: intelligent_learning.pkl  label_encoder.pkl  metadata.pkl  system_classifier.pkl
static/: script.js  style.css
templates/: add_case.html  analyze_os_pdf.html  base.html  batch_analysis_result.html  case_detail.html  case_feedback.html  dashboard.html  dashboard_old.html  dashboard_old_backup.html  edit_case.html  index.html  manage_systems.html  ml_learning_info.html  recent_cases.html  tutorial.html  upload_cases.html
