[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask>=3.1.1",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "numpy>=2.3.2",
    "openai>=1.99.9",
    "openpyxl>=3.1.5",
    "pandas>=2.3.1",
    "pdfplumber>=0.11.7",
    "psycopg2-binary>=2.9.10",
    "pypdf2>=3.0.1",
    "scikit-learn>=1.7.1",
    "sqlalchemy>=2.0.43",
    "werkzeug>=3.1.3",
]
